--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -54,7 +54,7 @@ jobs:
             -var "instance_type=${{ secrets.INSTANCE_TYPE }}" \
             -var "ami_description=${{ secrets.AMI_DESCRIPTION }}" \
             -var "region=${{ secrets.REGION }}" \
-            -var "source_ami=${{ vars.SOURCE_AMI }}" \
+            -var "source_ami=${{ secrets.SOURCE_AMI }}" \
             -var "ssh_username=${{ secrets.SSH_USERNAME }}" \
             aws.pkr.hcl
       
